--- a/app/src/main/res/layout/city_item.xml
+++ b/app/src/main/res/layout/city_item.xml
@@ -7,15 +7,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/city_item">
 
         <TextView
             android:id="@+id/categoryName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/dark_beige"
-            android:fontFamily="@font/vollkorn_semibold"
-            android:padding="15dp"
+            android:textColor="@color/dark_brown"
+            android:fontFamily="@font/vollkorn_bold"
             android:text="Город"
             android:textSize="20sp" />
     </LinearLayout>
