--- a/app/src/main/res/layout/collection_categories.xml
+++ b/app/src/main/res/layout/collection_categories.xml
@@ -2,31 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:background="@drawable/cat_col"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/categoryImg"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        android:src="@color/light_gray"
+        android:scaleType="centerCrop"/>
+
+    <TextView
+        android:id="@+id/categoryName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/categoryImg"
-            android:layout_width="match_parent"
-            android:layout_height="230dp"
-            android:src="@color/purple_200"
-            android:scaleType="centerCrop"/>
-
-        <TextView
-            android:id="@+id/categoryName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:padding="15dp"
-            android:background="@color/beige3"
-            android:textColor="@color/dark_brown"
-            android:fontFamily="@font/vollkorn_bold"
-            android:text="Категория"
-            android:textSize="20sp" />
-    </LinearLayout>
+        android:gravity="center_horizontal"
+        android:padding="15dp"
+        android:textColor="@color/dark_brown"
+        android:fontFamily="@font/vollkorn_bold"
+        android:text="Категория"
+        android:textSize="24sp" />
 
 </LinearLayout>
