--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -6,27 +6,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".InformationFragment">
 
-    <TextView
-        android:id="@+id/textViewReg"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/vollkorn_bold"
-        android:gravity="center"
-        android:paddingVertical="10dp"
-        android:text="Города"
-        android:textColor="@color/dark_brown"
-        android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/light_beige"
+        android:orientation="horizontal"
+        android:paddingHorizontal="15dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textViewReg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/vollkorn_bold"
+            android:gravity="center"
+            android:paddingVertical="10dp"
+            android:text="Города"
+            android:textColor="@color/dark_brown"
+            android:textSize="24sp"/>
+
+    </LinearLayout>
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:background="@drawable/search_view"
         android:textColor="@color/dark_brown"
         app:iconifiedByDefault="false"
-        app:layout_constraintTop_toBottomOf="@+id/textViewReg"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:queryHint="Поиск.." />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -34,6 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_marginHorizontal="5dp"
         android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
