--- a/app/src/main/res/layout/fragment_result_test.xml
+++ b/app/src/main/res/layout/fragment_result_test.xml
@@ -1,72 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ResultTestFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:background="@color/light_beige"
+        android:orientation="horizontal"
+        android:paddingHorizontal="15dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back_svg" />
+
+        <TextView
+            android:id="@+id/textViewReg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/vollkorn_bold"
+            android:gravity="center"
+            android:paddingVertical="10dp"
+            android:text="Результат прохождения"
+            android:textColor="@color/dark_brown"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="15dp"
         android:gravity="center"
-        android:layout_margin="15dp">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        tools:layout_editor_absoluteX="15dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text="Количество вопросов:"
             android:textAlignment="center"
-            android:text="Количество вопросов:"/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
 
         <TextView
             android:id="@+id/countQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text=""
             android:textAlignment="center"
-            android:text=""/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text="Количество правильных ответов:"
             android:textAlignment="center"
-            android:text="Количество правильных ответов:"/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
+
         <TextView
             android:id="@+id/countRightQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text=""
             android:textAlignment="center"
-            android:text=""/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text="Оценка:"
             android:textAlignment="center"
-            android:text="Оценка:"/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
+
         <TextView
             android:id="@+id/mark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text=""
             android:textAlignment="center"
-            android:text=""/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
 
     </LinearLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
