--- a/app/src/main/res/layout/fragment_test_informations.xml
+++ b/app/src/main/res/layout/fragment_test_informations.xml
@@ -1,66 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TestInformationsFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/light_beige"
+        android:orientation="horizontal"
+        android:paddingHorizontal="15dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back_svg" />
+
+        <TextView
+            android:id="@+id/textViewReg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/vollkorn_bold"
+            android:gravity="center"
+            android:paddingVertical="10dp"
+            android:text="Тест"
+            android:textColor="@color/dark_brown"
+            android:textSize="24sp" />
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text="Тест:"
             android:textAlignment="center"
-            android:text="Тест:"/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
 
         <TextView
             android:id="@+id/testName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text=""
             android:textAlignment="center"
-            android:text=""/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text="Количество вопросов:"
             android:textAlignment="center"
-            android:text="Количество вопросов:"/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
+
         <TextView
             android:id="@+id/countQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="24sp"
+            android:text=""
             android:textAlignment="center"
-            android:text=""/>
+            android:textSize="26sp"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"/>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@drawable/button">
+
             <TextView
                 android:id="@+id/testStart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/purple_200"
-                android:textStyle="bold"
-                android:textSize="24sp"
+                android:text="Начать тест"
+                android:fontFamily="@font/vollkorn_bold"
                 android:textAlignment="center"
-                android:text="Начать тест"/>
+                android:textColor="@color/dark_brown"
+                android:textSize="26sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
