--- a/app/src/main/res/layout/fragment_test_start.xml
+++ b/app/src/main/res/layout/fragment_test_start.xml
@@ -6,18 +6,50 @@
     android:layout_height="match_parent"
     tools:context=".TestStartFragment">
 
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/light_beige"
+        android:orientation="horizontal"
+        android:paddingHorizontal="15dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="25dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/back_svg" />
+
+        <TextView
+            android:id="@+id/textViewReg"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="@font/vollkorn_bold"
+            android:gravity="center"
+            android:paddingVertical="10dp"
+            android:text="Прохождение теста"
+            android:textColor="@color/dark_brown"
+            android:textSize="24sp"/>
+
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonTest"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="15dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -31,8 +63,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/vollkorn_semibold"
+                    android:textColor="@color/dark_brown"
                     android:text="Вопрос:"
-                    android:textColor="@color/black"
                     android:textSize="22sp" />
 
                 <TextView
@@ -41,7 +74,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:text=""
-                    android:textColor="@color/black"
+                    android:fontFamily="@font/vollkorn_semibold"
+                    android:textColor="@color/dark_brown"
                     android:textSize="22sp" />
             </LinearLayout>
 
@@ -52,7 +86,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text=""
-                android:textColor="@color/black"
+                android:fontFamily="@font/vollkorn_semibold"
+                android:textColor="@color/dark_brown"
                 android:textSize="22sp" />
 
             <TextView
@@ -61,7 +96,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Выберите один ответ на вопрос:"
-                android:textColor="@color/black"
+                android:fontFamily="@font/vollkorn_semibold"
+                android:textColor="@color/dark_brown"
                 android:textSize="22sp" />
 
             <RadioGroup
@@ -74,6 +110,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:textSize="22sp"
+                    android:fontFamily="@font/vollkorn_semibold"
+                    android:textColor="@color/dark_brown"
+                    android:backgroundTint="@color/dark_beige"
                     android:text="" />
 
                 <RadioButton
@@ -81,6 +121,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/vollkorn_semibold"
+                    android:textColor="@color/dark_brown"
+                    android:textSize="22sp"
+                    android:backgroundTint="@color/dark_beige"
                     android:text="" />
 
                 <RadioButton
@@ -88,17 +132,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/vollkorn_semibold"
+                    android:textColor="@color/dark_brown"
+                    android:textSize="22sp"
+                    android:backgroundTint="@color/dark_beige"
                     android:text="" />
 
             </RadioGroup>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-
-            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
@@ -108,18 +148,20 @@
         android:id="@+id/buttonTest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/button">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Следующий вопрос"
+            android:fontFamily="@font/vollkorn_bold"
+            android:textColor="@color/dark_brown"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="22sp"/>
+            android:textSize="24sp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
