--- a/app/src/main/res/layout/test_object_item.xml
+++ b/app/src/main/res/layout/test_object_item.xml
@@ -2,17 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:text="Название"
-        android:padding="10dp"
-        android:background="@drawable/object_item_stroke"
-        android:layout_marginBottom="10dp"/>
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/ellipse"
+            android:layout_marginRight="10dp"/>
+
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            android:fontFamily="@font/vollkorn_semibold"
+            android:textColor="@color/dark_brown"
+            android:text="Название"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="1.4dp"
+        android:background="@drawable/test"/>
 
 </LinearLayout>
